Text overlapping bug fixed for the tablet  responsive layout

--- a/assets/css/recipes-style.css
+++ b/assets/css/recipes-style.css
@@ -56,7 +56,7 @@
 }
 
 
-/*  Screen Size 578px and below Mobile Devices  */
+/*  Screen Size 578px Mobile Devices  */
 @media (min-width: 576px) { 
     .col-sm-6 {
         -ms-flex: 0 0 50%;
@@ -74,11 +74,17 @@
         display: flex;
         flex-wrap: wrap;
         }
+
+        /* Body Text */
+     .body-text{
+        margin: 20px 25px auto;
+        padding : 20px 30px auto;
+        width: 80%;
+        }
     }
         
-/*  Screen Size 768px and below Tablet Devices  */
+/*  Screen Size 768px Tablet Devices  */
 @media (min-width: 768px) {
-
     /* Recipe Image */
     .recipe-image{
     width: 300px;
